@@ -1,2 +1,0 @@
-# Nothing to do here: Must be explicitly required with
-# require 'model_mocker'
